04-19-2023, commit 0001: (VARIOUS) initial boilerplate
04-19-2023, commit 0002: (SourceParser.java) file reading, support for @Dhulb comments
05-03-2023, commit 0003: (VARIOUS) minor bug fix + support for text and data assembly
05-13-2023, commit 0004: (VARIOUS) implement number parsing
05-13-2023, commit 0005: (SDhulb.java, SourceParser.java) fixed exceptions
05-23-2023, commit 0006: (SDhulb.java, SourceParser.java) added types
05-25-2023, commit 0007: (VARIOUS) started preprocessor directives
06-12-2023, commit 0008: (VARIOUS) added more preprocessor directives